@@ -151,6 +151,7 @@ enum srv_atr {
 	SRV_ATR_NetCounter,
 	SRV_ATR_ExtraResc,
 	SRV_ATR_ServerName,
+	SRV_ATR_SchedVersion,
 #include "site_svr_attr_enum.h"
 	/* This must be last */
 	SRV_ATR_LAST
